<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_margin="10dp"
    android:backgroundTint="#EDBD5B"
    android:elevation="10dp"
    android:layoutDirection="rtl"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/item_IMG_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_gravity="center|start"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_headline_arrow_back" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"

            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_LBL_notes"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/untitled"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:minLines="1"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:text="@string/text_example"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_LBL_title"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/untitled"
                android:gravity="start"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/list_name"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_LBL_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:ellipsize="end"
            android:fontFamily="@font/untitled"
            android:gravity="end|center_vertical"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/ones"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>