<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".Activities.CreateCatItem">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/profile_FRM_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:orientation="vertical">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/createItem_BAR_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="1dp"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:indicatorColor="@color/main_buttons_green" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/createItem_FAB_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:backgroundTint="@color/main_buttons_on_main_green"
                    app:borderWidth="2dp"
                    app:elevation="8dp"
                    app:fabCustomSize="40dp"
                    app:srcCompat="@drawable/ic_baseline_edit"
                    app:tint="@color/white"
                    app:useCompatPadding="false" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/createItem_IMG_user"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_default_list_cover"
                    app:civ_border_color="#B2000000"
                    app:civ_border_width="3dp" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createItem_EDT_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_item_title"
                android:padding="10dp"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="#ECE8E8"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/main_buttons_yellow"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createItem_EDT_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="4"
                    android:hint="@string/insert_amount"
                    android:padding="10dp"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="#ECE8E8"
                    app:boxBackgroundMode="filled"
                    app:boxStrokeColor="@color/main_buttons_yellow"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"
                    app:errorEnabled="true"
                    app:suffixText="קילו"
                    app:suffixTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="4">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/createItem_TGBTN_ones"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/untitled"
                        android:text="@string/ones"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/createItem_TGBTN_kilo"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/untitled"
                        android:text="@string/kilos"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/createItem_EDT_notes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:paddingBottom="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:inputType="textAutoCorrect"
                    android:maxLines="3"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createItem_BTN_create"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/main_green"
                android:elevation="8dp"
                android:fontFamily="@font/rubik"
                android:text="@string/add"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_baseline_save"
                app:strokeColor="@color/cardview_shadow_start_color"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>