<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:layoutDirection="rtl"
    tools:context=".Activities.EditItemActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="8dp"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <FrameLayout
                android:id="@+id/profile_FRM_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/editItem_BAR_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:elevation="1dp"
                    app:indicatorColor="@color/main_buttons_green"
                    />

                <!--    <com.google.android.material.imageview.ShapeableImageView-->
                <!--        android:id="@+id/drawer_IMG_myprofile"-->
                <!--        android:layout_width="wrap_content"-->
                <!--        android:layout_height="wrap_content"-->
                <!--        android:src="@mipmap/ic_launcher"-->
                <!--        />-->

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/editItem_FAB_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:backgroundTint="@color/main_buttons_on_main_green"
                    app:borderWidth="2dp"
                    app:elevation="8dp"
                    app:fabCustomSize="40dp"
                    app:srcCompat="@drawable/ic_baseline_edit"
                    app:tint="@color/white"
                    app:useCompatPadding="false" />

                <!--            <com.airbnb.lottie.LottieAnimationView-->
                <!--                android:id="@+id/animationView"-->
                <!--                android:layout_width="150dp"-->
                <!--                android:layout_height="150dp"-->
                <!--                android:layout_gravity="center_horizontal"-->
                <!--                android:layout_marginBottom="20dp"-->
                <!--                app:lottie_autoPlay="true"-->
                <!--                app:lottie_loop="true"-->
                <!--                app:lottie_rawRes="@raw/anim_profile_pic"-->
                <!--                app:lottie_speed="0.5" />-->

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/editItem_IMG_user"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_default_list_cover"
                    app:civ_border_color="#B2000000"
                    app:civ_border_width="3dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/editItem_TXT_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editItem_EDT_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:padding="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/insert_amount"
                    app:counterMaxLength="5"
                    app:counterEnabled="true"
                    app:suffixText = "קילו"
                    app:suffixTextColor="@color/black"
                    app:boxBackgroundMode="filled"
                    app:errorEnabled="true"
                    app:boxStrokeColor="@color/main_buttons_yellow"
                    android:textColorHint="@color/black"
                    app:boxBackgroundColor="#ECE8E8"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/rubik"
                        android:textStyle="bold"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_vertical"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/editItem_TGBTN_ones"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ones"
                        android:fontFamily="@font/untitled"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        style="?attr/materialButtonOutlinedStyle"

                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/editItem_TGBTN_kilo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kilos"
                        android:fontFamily="@font/untitled"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        style="?attr/materialButtonOutlinedStyle"
                        />

                </com.google.android.material.button.MaterialButtonToggleGroup>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editItem_EDT_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:hint="@string/notes"
                app:counterMaxLength="50"
                app:counterEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/rubik"
                    android:textStyle="bold"
                    android:inputType="textAutoCorrect"
                    android:maxLines="3"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editItem_BTN_create"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/main_green"
                android:elevation="8dp"
                android:fontFamily="@font/rubik"
                android:text="@string/update"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                app:icon="@drawable/ic_baseline_save"
                app:strokeColor="@color/cardview_shadow_start_color"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>